--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="هذه هي صفحة هبوط لعد تنازلي لنشر تطبيق جوال"
+      content="هذه هي صفحة هبوط لعد تنازلي لنشر تطبيق لعية جوال"
     />
+    <title>الانطلاق قريبًا</title>
+    <link rel="icon" href="./images/logo1.png" />
     <link rel="stylesheet" href="asset/bootstrap/css/bootstrap.rtl.min.css" />
     <link rel="stylesheet" href="asset/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="./images/logo1.png" />
-    <title>الانطلاق قريبًا</title>
   </head>
   <body>
     <header class="text-center">
